<resources>
    <string name="app_name">Pepper</string>
    <string name="canteen_app">Canteen Menu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Menu</string>
    <string name="title_dashboard">Cart</string>
    <string name="title_notifications">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">Sign Out</string>
    <string name="credits">Credits</string>
    <string name="history">Order History</string>
    <string name="profilePic">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="share">Share with friends</string>

    <string name="itemName">Name</string>
    <string name="itemPrice">Price</string>
    <string name="quantity">"00"</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="empty">No previous orders found</string>

    <string name="TeaCoffee">Tea &amp; Coffee</string>
    <string name="Snacks">Snacks</string>
    <string name="BombayChat">Bombay Chat</string>
    <string name="Frankie">Frankie</string>
    <string name="SouthIndian">South Indian</string>
    <string name="LunchDinner">Lunch &amp; Dinner</string>
    <string name="Sandwich">Sandwich</string>
    <string name="PavBhaji">Pav Bhaji</string>
    <string name="Chinese">Chinese Dishes</string>
    <string name="Salad">Curd, Salad &amp; Fruits</string>
    <string name="SplDosa">Special Dosa</string>
    <string name="Tandoori">Tandoori</string>
    <string name="SplPunjabi">Special Punjabi</string>
    <string name="Punjabi">Punjabi</string>
    <string name="Kofta">Kofta Dishes</string>
    <string name="Rice">Basmati Rice</string>
    <string name="Starters">Starters</string>
    <string name="Juice">Juices &amp; Shakes</string>

    <string name="rs">\u20B9</string>
    <string name="clear_history">Clear History</string>
    <string name="proceed">Proceed</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="aditi_anup">Aditi Anup</string>
    <string name="rhea_acharya">Rhea Acharya</string>
    <string name="b_tech_cs_b013">B.Tech CS B013</string>
    <string name="dishant_bhatt">Dishant Bhatt</string>
    <string name="samreen_reyaz">Samreen Reyaz</string>
    <string name="b_tech_cs_b005">B.Tech CS B005</string>
    <string name="we_hope_you_like_our_application">We hope you like our application :)</string>
    <string name="b_tech_cs_b001">B.Tech CS B001</string>
    <string name="b_tech_cs_b002">B.Tech CS B002</string>

    <string name="samreen"><u>https://in.linkedin.com/in/samreen-reyaz</u></string>
    <string name="dishant"><u>https://www.linkedin.com/in/dishant-bhatt-ab75b4153</u></string>
    <string name="aditi"><u>https://www.linkedin.com/in/aditi-anup-47a142161</u></string>
    <string name="rhea"><u>https://www.linkedin.com/in/rhea-acharya-51416b141</u></string>
    <string name="cart">Cart</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_image">Click here to add image</string>
    <string name="view_orders_on_date">View orders on date</string>
    <string name="view_all">View All</string>
    <string name="empty_cart">"I feel lonely here…"</string>
    <string name="go_back_to_menu">Go Back To Menu</string>

</resources>
