<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mukess.android.pepper.CategoryFragment">

    <SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:iconifiedByDefault="true"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/searchListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:divider="@android:color/transparent"
            android:transcriptMode="alwaysScroll"
            tools:listitem="@layout/item_menu" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fafafa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/tea"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/tea_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/TeaCoffee" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noTea"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/snacks"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/snacks_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Snacks" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noSnacks"
                            style="@style/categoryTextSmall"
                            android:layout_width="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/bombaychat"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/chat_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/BombayChat" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noChat"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/frankie"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/frankie_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Frankie" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noFrankie"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/south"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/south_indian_dosa">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/SouthIndian" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noSouth"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lunch"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/lunch_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/LunchDinner" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noLunch"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/sandwich"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/sandwich_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Sandwich" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noSandwich"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pavbhaji"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/pav_bhaji_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/PavBhaji" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noPavbhaji"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/chinese"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/chinese_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Chinese" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noChinese"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/salad"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/curd_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Salad" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noSalad"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/spldosa"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/spl_dosa_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/SplDosa" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noSplDosa"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tandoori"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/tandoori_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Tandoori" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noTandoori"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/punjabi"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/punjabi_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Punjabi" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noPunjabi"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/splpunjabi"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/spl_punjabi_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/SplPunjabi" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noSplPunjabi"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/categoriesParent">

                    <LinearLayout
                        android:id="@+id/kofta"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/kofta_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Kofta" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noKofta"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/rice"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/rice_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Rice" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noRice"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/categoriesParent"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:id="@+id/starters"
                        style="@style/categoriesChildLeft"
                        android:background="@drawable/starters_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Starters" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noStarters"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/juices"
                        style="@style/categoriesChildRight"
                        android:background="@drawable/shake_edited">

                        <TextView
                            style="@style/categoryText"
                            android:text="@string/Juice" />

                        <View style="@style/line" />

                        <TextView
                            android:id="@+id/noJuice"
                            style="@style/categoryTextSmall" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>
